metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/Project_Delivery_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Project Delivery Snapshot</label>
    <nameField>
        <label>Project Delivery Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Delivery Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>