metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/Actual_project_duration_d__c.field-meta.xml
<CustomField>
    <fullName>Actual_project_duration_d__c</fullName>
    <label>Actual project duration (d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>