metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/Actual_Project_Finish_date_Phase_2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Project_Finish_date_Phase_2__c</fullName>
    <label>Actual Project Finish date Phase 2</label>
    <type>Date</type>
</CustomField>