metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/Actual_Project_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Project_Start_date__c</fullName>
    <label>Actual Project Start date</label>
    <type>Date</type>
</CustomField>