metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/One_Off_converted__c.field-meta.xml
<CustomField>
    <fullName>One_Off_converted__c</fullName>
    <label>One Off (converted)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>