metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>