metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/PLANNED_Project_Finish_date_Phase_2__c.field-meta.xml
<CustomField>
    <fullName>PLANNED_Project_Finish_date_Phase_2__c</fullName>
    <label>PLANNED Project Finish date Phase 2</label>
    <type>Date</type>
</CustomField>