metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/PLANNED_Project_Start_date__c.field-meta.xml
<CustomField>
    <fullName>PLANNED_Project_Start_date__c</fullName>
    <label>PLANNED Project Start date</label>
    <type>Date</type>
</CustomField>