metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/project_completion__c.field-meta.xml
<CustomField>
    <fullName>project_completion__c</fullName>
    <label>% project completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>