metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/Project_timelines_delta_d__c.field-meta.xml
<CustomField>
    <fullName>Project_timelines_delta_d__c</fullName>
    <label>Project timelines delta (d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>