metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/PROJECTED_Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>PROJECTED_Project_Duration__c</fullName>
    <label>PROJECTED Project Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>