metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/Reason_for_delay__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_delay__c</fullName>
    <label>Reason for delay</label>
    <length>250</length>
    <type>Text</type>
</CustomField>