metadata/force-app/main/default/objects/Project_Delivery_Snapshot__c/fields/SMB_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>SMB_Enterprise__c</fullName>
    <label>SMB - Enterprise</label>
    <length>100</length>
    <type>Text</type>
</CustomField>